# AWattPrice

./: .gitignore  AppInformation.pages  CONTRIBUTING.md  LICENSE  PrivacyPolicy.md  PrivacyPolicyEnglish.md  PrivacyPolicyGerman.md  README.md
.github/: dependabot.yml
App/: .swiftformat
App Icon/2ndAppIcon.pxd/: metadata.info
App Icon/2ndAppIcon.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
App Icon/2ndAppIcon.pxd/data/: 2D4BDB66-DE83-476C-8D61-44748C0A36AE  4AC9C30A-84A2-4EC5-918F-127EF81F3772  5746F7BF-3752-4AF9-A26A-CD08F2EC5568  5B0C9417-1CC2-4D24-8008-0102D72DE1A5  5CA24212-5B2B-4193-B9DD-46A95ED67971  6A4EBE79-B0D7-4A1B-8A4B-198753B0BC62  8F00CD37-6503-493F-8922-844F1FF35C41  AB118D62-C62B-4529-B88B-C59A8836C7BC  D18AB528-6172-400E-AA8D-4CE54943F61A  F7A06011-FEDB-49F9-9067-FF1CDC737BCE
App Icon/AppIcon.pxd/: metadata.info
App Icon/AppIcon.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
App Icon/AppIcon.pxd/data/: 72EA5437-E0BB-4423-B66B-D6C1F478489F  D37CC8BF-04E9-436D-970F-E074D1917F43  D7ACF0DF-2122-453F-8F8D-88DA14493E30  EE968688-AC57-4A7D-8C02-791B8A8EE7A8
App Icon/AppIconDesign2.pxd/: metadata.info
App Icon/AppIconDesign2.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
App Icon/AppIconDesign2.pxd/data/: 32DE725C-F19A-4013-930E-EF92238B7423  686C8FD0-6CBC-4DA5-973E-247DD590F9DE  9B8A75A2-880C-410A-91A2-17BDE4DB8A58  D7ACF0DF-2122-453F-8F8D-88DA14493E30
App/AWattPrice/: AWattPrice.ipa  AWattPriceWidgetExtension.entitlements  AppGroup.swift  AppGroupManager.swift  Development.xcconfig  GlobalAppSettings.swift  Production.xcconfig  README.md  project.yml
App/AWattPrice/AWattPrice/: AWattPriceApp.swift  AWattPriceProduction.entitlements  AWattPriceWidgetExtensionProduction.entitlements  AppDelegate.swift  AppGroupManager.swift  AwattarApp.swift  ConsumptionComparisonView.swift  ConsumptionResultView.swift  ContentView.swift  HomeView.swift  Info.plist  Launch Screen.storyboard  Production.xcconfig  Setting+CoreDataProperties.swift  SettingsPageView.swift  Staging.xcconfig  TabNavigatorView.swift
App/AWattPrice/AWattPrice.xcodeproj/: project.pbxproj
App/AWattPrice/AWattPriceAppTests/: AWattPriceTests.swift  AwattarAppTests.swift
App/AWattPrice/fastlane/: Appfile  (+6 more)
App/AwattarApp/: Setting+CoreDataClass.swift  Setting+CoreDataProperties.swift  Settings+CoreDataClass.swift  Settings+CoreDataProperties.swift
Backend/: AUTHORS.rst  LICENSE.txt  README.md  manage.py  requirements.txt  requirements_production.txt  store_newest_data.py
Backend/awattar_backend/: asgi.py  settings.py  store_newest_data.py  urls.py  wsgi.py
Backend/awattprice_backend/: .coveragerc  LICENSE  requirements.txt  requirements_devel.txt  setup.cfg
Backend/data_api/: apps.py  urls.py  views.py
Backend/docs/: Makefile
Backend/energy_information/: apps.py  merge_data.py  urls.py  views.py
Backend/misc/: cheapest_price.py  price_below_value.py
Backend/src/: scheduled_request.py
Backend/static/: chargeProfiles.json
Backend/tests/: test_apns.py
Legal/: PrivacyPolicyEnglish.md
PrivacyPolicy/: PrivacyPolicyEnglish.md  PrivacyPolicyGerman.md
TermsOfUse/: TermsOfUseEnglish.md  TermsOfUseGerman.md
Website/: index.html  index_english.html  privacy_policy_english.html  privacy_policy_german.html  style.css
Website/Electricity Price Web App/: index.html  nginx-location.conf  package-lock.json  package.json  vite.config.js
Website/css/: bootstrap.css  owl.carousel.css  style.css
Website/privacy_policy/: english.html  german.html
Website/style/: style.css
Website/support/: english.html  german.html
Website/terms_of_use/: english.html  german.html
backend/: Dockerfile  README.md  deploy.sh  docker-compose.yaml  pylintrc  pyproject.toml  remote_deploy.sh
backend/docker/: Dockerfile  docker-compose.yaml
backend/docker/docker-compose/: docker-compose.yaml
backend/docker/docker-compose-staging/: docker-compose.yaml
backend/docs/: docker.md  energy_prices.get.md  general.md  get_prices.md  notification_tasks.md  notifications.price_below.service.md
backend/misc/: generate_database.py  price_below_value.py  transfer_database.py
backend/src/awattprice/: __init__.py  api.py  configurator.py  database.py  defaults.py  exceptions.py  notifications.py  orm.py  prices.py  utils.py
backend/src/awattprice_group/awattprice/: utils.py
backend/src/awattprice_group/awattprice_helpers/: copy_database_entries.py
backend/src/awattprice_group/awattprice_notifications/: __init__.py
backend/src/awattprice_group/awattprice_notifications/price_below/: notifications.py
backend/src/awattprice_helpers/: copy_database_entries.py
backend/src/awattprice_misc/: transfer_database.py
backend/src/awattprice_notifications/: __init__.py  apns.py  defaults.py  notifications.py  utils.py
backend/src/awattprice_notifications/price_below/: defaults.py  notifications.py  prices.py  service.py  tokens.py  utils.py
backend/src/notification_services/price_below/: service.py
backend_new/: .coverage  README.rst  pylintrc  pyproject.toml  tox.ini
backend_new/docs/: general.md  get_prices.md  notification_tasks.md
backend_new/misc/: generate_database.py
backend_new/src/: .coverage  api.py
backend_new/src/awattprice/: api.py  config.py  database.py  defaults.py  exceptions.py  notifications.py  orm.py  prices.py  tables.py  utils.py
backend_new/src/awattprice_backend/: api.py  defaults.py
backend_old/: requirements.txt  requirements_production.txt
legacy_backend/: CHANGELOG.rst  requirements.txt  requirements_devel.txt  requirements_production.txt  setup.cfg  setup.py
legacy_backend/src/: scheduled_request.py
legacy_backend/tests/: conftest.py  test_skeleton.py
old_backend/: README.rst  requirements_production.txt
old_backend/tests/: test_apns.py
v1_backend/: pyproject.toml  requirements.txt  requirements_production.txt  setup.cfg
v1_backend/misc/: cheapest_price.py
v1_backend/src/awattprice/: apns.py
v1_backend/src/fastapi_conf/: api.py
v1_backend/src/v1_awattprice/: apns.py  config.py  defaults.py  poll.py  token_manager.py  utils.py  v2_backend_handler.py
(+651 files in other folders)
